[gd_scene load_steps=5 format=2]

[ext_resource path="res://Script/Block.gd" type="Script" id=1]
[ext_resource path="res://Script/Platform.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]

render_priority = 0
blend_mode = 1
light_mode = 0

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10.0957, 10 )

[node name="Block" type="Node2D"]

material = SubResource( 1 )
script = ExtResource( 1 )
_sections_unfolded = [ "Material" ]
can_click = true
blockcolor = 0

[node name="KinematicBody2D" type="KinematicBody2D" parent="." index="0"]

input_pickable = true
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Pickable" ]

[node name="Node2D" type="Node2D" parent="KinematicBody2D" index="0"]

script = ExtResource( 2 )
color = Color( 0, 0, 0, 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D" index="1"]

build_mode = 0
polygon = PoolVector2Array( -100, 25, -100, -25, 100, -25, 100, 25 )
_sections_unfolded = [ "Z Index" ]

[node name="Area2D" type="Area2D" parent="KinematicBody2D" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Pickable" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D" index="0"]

position = Vector2( -0.493176, 0.0260992 )
scale = Vector2( 9.59408, 2.14336 )
shape = SubResource( 2 )

[connection signal="input_event" from="KinematicBody2D" to="." method="_on_KinematicBody2D_input_event"]

[connection signal="body_entered" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_body_exited"]


